# imageProc_methods

OpticalFlow/Coarse-to-fine_PatchMatch/: CMakeLists.txt  CPM.cpp  CPM.h  OpticFlowIO.h  README.md  main.cpp
OpticalFlow/MeshFlow-Video-Stabilization/: README.md
OpticalFlow/MeshFlow-Video-Stabilization/data/: example7_input.avi
OpticalFlow/MeshFlow-Video-Stabilization/src/: MeshFlow.py  Optimization.py  Stabilization.py
OpticalFlow/MeshFlow_Denoising/: README.md  build_vs.bat
OpticalFlow/MeshFlow_Denoising/src/: CMakeLists-lib.txt  CMakeLists.txt  Fast_klt.cpp  Fast_klt.h  Mesh.cpp  Mesh.h  MeshFlow.cpp  MeshFlow.h  MotionDenoiser.cpp  MotionDenoiser.h  VideoIO.cpp  VideoIO.h  main.cpp  opencv4_defines.h
OpticalFlow/opencv_optflow/: deepflow.cpp  interfaces.cpp  motempl.cpp  pcaflow.cpp  precomp.hpp  rlofflow.cpp  simpleflow.cpp  sparse_matching_gpc.cpp  sparsetodenseflow.cpp  tvl1flow.cpp
basic/: CMakeLists.txt  gradients.cpp  gradients.h  main.cpp
filter/edgepreserving_filter/DomainTransform/: README.md
filter/edgepreserving_filter/DomainTransform/src/: CMakeLists.txt  main.cpp
filter/gray_code_kernels/: gck.c  gck2d.c  test_gck.cpp
